--- a/rtube/templates/admin/import_videos.html
+++ b/rtube/templates/admin/import_videos.html
@@ -210,7 +210,7 @@
     <body>
         <div class="header">
             <div class="header-left">
-                <a href="/" class="back-link">&larr; Back to RTube</a>
+                <a href="/" class="back-link" style="display: inline-flex; align-items: center; gap: 5px;"><img src="{{ url_for('static', filename='logo_transparent.png') }}" alt="RTube" height="30"></a>
                 <h1>Import Videos</h1>
             </div>
             <span class="video-count">{{ orphan_videos | length }} orphan video{{ 's' if orphan_videos | length != 1 else '' }} found</span>
