--- a/rtube/templates/index.html
+++ b/rtube/templates/index.html
@@ -985,7 +985,7 @@
 
 <body>
     <div class="header">
-        <a href="/">RTube</a>
+        <a href="/" style="display: flex; align-items: center;"><img src="{{ url_for('static', filename='logo_transparent.png') }}" alt="RTube" height="30"></a>
     </div>
     <div class="watch-layout">
         <div class="watch-main">
