--- a/rtube/templates/admin/users.html
+++ b/rtube/templates/admin/users.html
@@ -224,7 +224,7 @@
     <body>
         <div class="header">
             <div class="header-left">
-                <a href="/" class="back-link">&larr; Back to RTube</a>
+                <a href="/" class="back-link" style="display: inline-flex; align-items: center; gap: 5px;"><img src="{{ url_for('static', filename='logo_transparent.png') }}" alt="RTube" height="30"></a>
                 <h1>User Management</h1>
             </div>
             <div class="header-left">
