--- a/rtube/templates/auth/profile.html
+++ b/rtube/templates/auth/profile.html
@@ -225,7 +225,7 @@
     <body>
         <div class="header">
             <div class="header-left">
-                <a href="/" class="back-link">&larr; Back to RTube</a>
+                <a href="/" class="back-link" style="display: inline-flex; align-items: center; gap: 5px;">&larr; Back to <img src="{{ url_for('static', filename='logo_transparent.png') }}" alt="RTube" height="20"></a>
                 <h1><span class="username-highlight">{{ profile_user.username }}</span>'s Profile</h1>
             </div>
             <div class="stats">
