--- a/rtube/templates/videos.html
+++ b/rtube/templates/videos.html
@@ -529,8 +529,8 @@
             <a href="{{ url_for('auth.logout') }}" class="btn-logout">Logout</a>
             {% else %}
             <a href="{{ url_for('auth.login') }}" class="btn-login">Login</a>
-            {% if not oidc_enabled %}<a href="{{ url_for('auth.register') }}" class="btn-register">Register</a>{% endif
-            %}
+            {% if enable_registration %}<a href="{{ url_for('auth.register') }}" class="btn-register">Register</a>{%
+            endif %}
             {% endif %}
         </div>
     </div>
